Update project structure: add pyproject.toml, remove setup.py, add new modules, and update existing files. Added description of paradiselabs and call for co-founder; upcoming hackathon.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,77 @@
-terml_venv/
+# Python
 __pycache__/
-*.pyc
-.env
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+terml_venv/
+venv/
+ENV/
+env/
+
+# IDEs and editors
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.pydevproject
+.spyderproject
+.spyproject
+.ropeproject
+
+# Operating system files
 .DS_Store
+Thumbs.db
+
+# TerML specific
+.env
+*.log
+*.sqlite
+
+# Miscellaneous
+*.bak
+*.tmp
+*.temp
+.cache
+.pytest_cache/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# Coverage reports
+htmlcov/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+
+# Docs
+docs/_build/
+
+# MyPy
+.mypy_cache/
+
+# VSCode workspace files
+*.code-workspace
