--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,185 @@
+aiofiles==23.2.1
+aiosqlite==0.20.0
+alembic==1.13.1
+altair==5.3.0
 annotated-types==0.7.0
-anthropic==0.34.2
+anthropic==0.7.2
 anyio==3.7.1
-certifi==2024.8.30
+arxiv==2.1.3
+asyncpg==0.29.0
+attrs==23.2.0
+autogen==1.0.16
+autogenstudio==0.1.3
+autopep8==2.1.1
+build==1.2.1
+CacheControl==0.14.0
+cachetools==5.4.0
+certifi==2024.6.2
+cffi==1.16.0
 charset-normalizer==3.3.2
+cleo==2.1.0
 click==8.1.3
+colorama==0.4.6
+contourpy==1.2.1
+crashtest==0.4.1
+cycler==0.12.1
+decorator==5.1.1
+diskcache==5.6.3
+distlib==0.3.8
 distro==1.9.0
-filelock==3.16.0
-fsspec==2024.9.0
+dnspython==2.6.1
+docker==7.1.0
+docopt==0.6.2
+docutils==0.21.2
+dulwich==0.21.7
+email_validator==2.1.1
+exceptiongroup==1.2.1
+fastapi==0.111.0
+fastapi-cli==0.0.4
+fastjsonschema==2.20.0
+feedparser==6.0.11
+ffmpy==0.3.2
+filelock==3.14.0
+FLAML==2.1.2
+fonttools==4.52.1
+fsspec==2024.6.0
+google-ai-generativelanguage==0.6.6
+google-api-core==2.19.1
+google-api-python-client==2.137.0
+google-auth==2.32.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.7.2
+googleapis-common-protos==1.63.2
+gradio==4.31.5
+gradio_client==0.16.4
+greenlet==3.0.3
+groq==0.6.0
+grpcio==1.65.1
+grpcio-status==1.62.2
 h11==0.14.0
 httpcore==1.0.5
-httpx==0.27.2
-huggingface-hub==0.24.6
-idna==3.8
+httplib2==0.22.0
+httptools==0.6.1
+httpx==0.27.0
+huggingface-hub==0.23.2
+idna==3.7
+importlib_metadata==7.1.0
+importlib_resources==6.4.0
+iniconfig==2.0.0
+installer==0.7.0
+jaraco.classes==3.4.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.1
+Jinja2==3.1.4
 jiter==0.5.0
-packaging==24.1
-pydantic==2.9.1
-pydantic_core==2.23.3
+jsonpatch==1.33
+jsonpointer==2.4
+jsonref==1.1.0
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+keyring==24.3.1
+kiwisolver==1.4.5
+langchain-core
+langgraph==0.0.55
+langsmith==0.1.63
+loguru==0.7.2
+Mako==1.3.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.0
+mdurl==0.1.2
+more-itertools==10.2.0
+mpmath==1.3.0
+msgpack==1.0.8
+networkx==3.3
+nh3==0.2.17
+numpy==1.26.4
+openai==1.31.0
+orjson==3.10.3
+packaging>=23.2,<24.0
+pandas==2.2.2
+pexpect==4.9.0
+pillow==10.3.0
+pkginfo==1.10.0
+platformdirs==4.2.2
+pluggy==1.5.0
+poetry==1.8.3
+poetry-core==1.9.0
+poetry-plugin-export==1.8.0
+prompt_toolkit==3.0.46
+proto-plus==1.24.0
+protobuf==4.25.3
+psutil==5.9.8
+psycopg==3.2.1
+psycopg2==2.9.9
+ptyprocess==0.7.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pyautogen==0.2.27
+pycodestyle==2.11.1
+pycparser==2.22
+pydantic==2.7.3
+pydantic_core==2.18.4
+pydub==0.25.1
+Pygments==2.18.0
+pyparsing==3.1.2
+pyproject_hooks==1.1.0
+pyte==0.8.2
+pytest==7.3.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
-PyYAML==6.0.2
+python-multipart==0.0.9
+pytz==2024.1
+PyYAML==6.0.1
+rapidfuzz==3.9.4
+readme_renderer==43.0
+referencing==0.35.1
+regex==2024.5.15
 requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.7.1
+rpds-py==0.18.1
+rsa==4.9
+ruff==0.4.5
+safetensors==0.4.3
+semantic-version==2.10.0
+setuptools==75.1.0
+sgmllib3k==1.0.0
+shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
-# Editable install with no version control (terml==0.2.0)
--e /Users/cooper/Desktop/AI_ML/TerML
-tokenizers==0.20.0
-tqdm==4.66.5
-typing_extensions==4.12.2
-urllib3==2.2.2
+SQLAlchemy==2.0.30
+sqlmodel==0.0.21
+starlette==0.37.2
+sympy==1.13.1
+tabulate==0.9.0
+tenacity==8.3.0
+termcolor==2.4.0
+-e git+https://github.com/paradiselabs-ai/TerML.git@b0be0b6902e2678388674028458276f6b908c2a7#egg=terml
+thefuck==3.32
+tiktoken==0.6.0
+tokenizers==0.19.1
+tomlkit==0.12.0
+toolz==0.12.1
+torch==2.3.1
+tqdm==4.66.4
+transformers==4.41.0
+trove-classifiers==2024.7.2
+twine==5.1.0
+typer==0.12.3
+typing_extensions==4.12.1
+tzdata==2024.1
+ujson==5.10.0
+uritemplate==4.1.1
+urllib3==2.2.1
+uuid6==2024.1.12
+uvicorn==0.29.0
+uvloop==0.19.0
+virtualenv==20.26.3
+watchfiles==0.21.0
+wcwidth==0.2.13
+websockets==11.0.3
+wheel==0.43.0
+xattr==1.1.0
+zipp==3.19.0
